Convert common Toasts to Snackbars for legibility

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -418,7 +418,8 @@
         android:fastScrollEnabled="false"
         android:hapticFeedbackEnabled="false"
         android:scrollbarThumbVertical="@drawable/scrollbar"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical">
+    </ListView>
 
     <LinearLayout
         android:id="@+id/more_buttons"
