--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -372,45 +372,52 @@
     </LinearLayout>
 
 
-    <LinearLayout
+    <ScrollView
         android:id="@+id/metadata"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/details_layout"
-        android:orientation="vertical"
-        android:padding="4dp">
+        >
 
-        <EditText
-            android:id="@+id/metadata_comment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minLines="2"
-            android:hint="COMMENT"
-            android:autoLink="all"
-            />
+            android:orientation="vertical"
+            android:padding="4dp">
 
-        <TableLayout
-            android:id="@+id/metadata_tags_table"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:stretchColumns="1"
-            android:padding="0dp"
-            >
-            <TableRow android:layout_width="match_parent">
-                <TextView
-                    android:text="key!"
-                    android:paddingEnd="16dp"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    />
-                <EditText
-                    android:text="value!"
-                    android:layout_height="40dp"
-                    android:layout_width="match_parent"
-                    />
-            </TableRow>
-        </TableLayout>
-    </LinearLayout>
+            <EditText
+                android:id="@+id/metadata_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minLines="2"
+                android:hint="COMMENT"
+                android:autoLink="all"
+                />
+
+            <TableLayout
+                android:id="@+id/metadata_tags_table"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:stretchColumns="1"
+                android:padding="0dp"
+                >
+                <TableRow android:layout_width="match_parent">
+                    <TextView
+                        android:text="key!"
+                        android:paddingEnd="16dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center"
+                        />
+                    <EditText
+                        android:text="value!"
+                        android:layout_height="40dp"
+                        android:layout_width="match_parent"
+                        />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
     <ListView
         android:id="@+id/song_list"
@@ -432,7 +439,8 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/action_button"
         android:orientation="horizontal"
-        android:weightSum="350">
+        android:weightSum="350"
+        >
 
         <!--
         icon ic_action_prev, ic_action_play, ic_action_pause, ic_action_next
