Metadata Table: Make comment links clickable

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -393,6 +393,7 @@
                 android:minLines="2"
                 android:hint="COMMENT"
                 android:autoLink="all"
+                android:linksClickable="true"
                 />
 
             <TableLayout
