Metadata table: make read-only
I tested around, but I figured that JAudioTagger is very unreliable and gotcha-y. Comments that I wrote for one file appeared in another, and the file I intended to write to now had an old comment that I already removed a few writes ago.

For this reason, and in order to not confuse users, I have decided that I will not be using JAudioTagger to write metadata. After all, this is a hard-forked and outdated version.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -386,12 +386,12 @@
             android:orientation="vertical"
             android:padding="4dp">
 
-            <EditText
+            <TextView
                 android:id="@+id/metadata_comment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:minLines="2"
-                android:hint="COMMENT"
+                android:hint="No comment available"
                 android:autoLink="all"
                 android:linksClickable="true"
                 />
@@ -408,24 +408,16 @@
                         android:text="key!"
                         android:paddingEnd="16dp"
                         android:layout_height="match_parent"
-                        android:gravity="center"
+                        android:gravity="end"
                         />
-                    <EditText
+                    <TextView
                         android:text="value!"
-                        android:layout_height="40dp"
-                        android:layout_width="match_parent"
+                        android:paddingEnd="16dp"
+                        android:layout_height="match_parent"
+                        android:gravity="start"
                         />
                 </TableRow>
             </TableLayout>
-
-            <Button
-                android:id="@+id/metadata_tags_save_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Save"
-                android:textColor="@color/LightGrey"
-                android:background="@color/LightBlack"
-                android:enabled="false"/>
 
         </LinearLayout>
 
