--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,7 @@
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,7 +29,7 @@
         android:id="@+id/actions_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:orientation="horizontal"
         android:paddingBottom="3dp"
@@ -40,7 +41,7 @@
             android:layout_gravity="bottom"
             android:layout_marginBottom="2dp"
             android:orientation="vertical"
-            android:paddingRight="5dp">
+            android:paddingEnd="5dp">
 
             <ImageButton
                 android:id="@+id/app_button"
@@ -79,7 +80,7 @@
         <SeekBar
             android:id="@+id/seek_bar"
             style="@style/SeekBarAppTheme"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginBottom="2dp"
@@ -96,7 +97,7 @@
             android:layout_marginBottom="2dp"
             android:onClick="toggleSeekButtons"
             android:orientation="vertical"
-            android:paddingRight="5dp">
+            android:paddingEnd="5dp">
 
             <TextView
                 android:id="@+id/duration"
@@ -105,7 +106,8 @@
                 android:layout_gravity="bottom|center_horizontal"
                 android:text="00:00"
                 android:textSize="18sp"
-                android:visibility="invisible" />
+                android:visibility="invisible"
+                tools:ignore="HardcodedText" />
 
 
             <ImageButton
@@ -132,10 +134,10 @@
             android:id="@+id/playBackSpeed"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_weight="51"
-            android:inputType="numberDecimal"
+            android:layout_weight="50"
             android:textColor="?attr/colorActionBtn"
             android:gravity="center"
+            tools:ignore="HardcodedText"
             android:text="1.0x"/>
 
         <xyz.mordorx.sicmu.RepeatingImageButton
@@ -158,7 +160,8 @@
             android:clickable="true"
             android:onClick="seek"
             android:text="20s"
-            android:textColor="?attr/colorActionBtn" />
+            android:textColor="?attr/colorActionBtn"
+            tools:ignore="HardcodedText" />
 
         <xyz.mordorx.sicmu.RepeatingImageButton
             android:id="@+id/m5_button"
@@ -178,7 +181,9 @@
             android:layout_gravity="center"
             android:clickable="false"
             android:text="5s"
-            android:textColor="?attr/colorActionBtn" />
+            android:textColor="?attr/colorActionBtn"
+            tools:ignore="HardcodedText"
+            />
 
         <xyz.mordorx.sicmu.RepeatingImageButton
             android:id="@+id/p5_button"
@@ -200,7 +205,8 @@
             android:clickable="true"
             android:onClick="seek"
             android:text="20s"
-            android:textColor="?attr/colorActionBtn" />
+            android:textColor="?attr/colorActionBtn"
+            tools:ignore="HardcodedText" />
 
         <xyz.mordorx.sicmu.RepeatingImageButton
             android:id="@+id/p20_button"
@@ -251,7 +257,7 @@
     <LinearLayout
         android:id="@+id/details_layout"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/warning_layout"
         android:gravity="start"
         android:orientation="horizontal">
@@ -368,67 +374,69 @@
                     app:srcCompat="@drawable/ic_star_0"/>
             </LinearLayout>
 
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="4dp">
+
+                <TextView
+                    android:id="@+id/metadata_comment"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minLines="2"
+                    android:background="@color/cardview_dark_background"
+                    android:hint="No comment available"
+                    android:autoLink="all"
+                    android:linksClickable="true"
+                    />
+
+                <TableLayout
+                    android:id="@+id/metadata_tags_table"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="1"
+                    android:padding="0dp"
+                    >
+                    <TableRow android:layout_width="match_parent">
+                        <TextView
+                            android:text="key!"
+                            android:paddingEnd="16dp"
+                            android:layout_height="match_parent"
+                            android:gravity="end"
+                            tools:ignore="HardcodedText" />
+                        <TextView
+                            android:text="value!"
+                            android:paddingEnd="16dp"
+                            android:layout_height="match_parent"
+                            android:gravity="start"
+                            tools:ignore="HardcodedText" />
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 
-
+<!--
     <ScrollView
         android:id="@+id/metadata"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/details_layout"
         android:layout_above="@+id/more_buttons"
         >
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="4dp">
-
-            <TextView
-                android:id="@+id/metadata_comment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minLines="2"
-                android:hint="No comment available"
-                android:autoLink="all"
-                android:linksClickable="true"
-                />
-
-            <TableLayout
-                android:id="@+id/metadata_tags_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:stretchColumns="1"
-                android:padding="0dp"
-                >
-                <TableRow android:layout_width="match_parent">
-                    <TextView
-                        android:text="key!"
-                        android:paddingEnd="16dp"
-                        android:layout_height="match_parent"
-                        android:gravity="end"
-                        />
-                    <TextView
-                        android:text="value!"
-                        android:paddingEnd="16dp"
-                        android:layout_height="match_parent"
-                        android:gravity="start"
-                        />
-                </TableRow>
-            </TableLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
+    </ScrollView>-->
 
     <ListView
         android:id="@+id/song_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/more_buttons"
-        android:layout_below="@+id/metadata"
+        android:layout_below="@+id/details_layout"
         android:layout_alignParentStart="true"
         android:choiceMode="singleChoice"
         android:fastScrollEnabled="false"
@@ -537,7 +545,7 @@
             style="@style/BottomButton"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:layout_weight="49"
+            android:layout_weight="50"
             android:onClick="openSettings"
             android:src="@drawable/ic_menu_settings" />
 
